--- a/style.css
+++ b/style.css
@@ -112,6 +112,12 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
 
 .hidden {
     display: none !important;
+
+    visibility: hidden;
+    opacity: 0;
+     height: 0;
+     overflow: hidden;
+     position: absolute;
 }
 
 
